2010-02-10 S. Thiell <stephane.thiell@cea.fr>
	
	* scripts/clush.py: Due to set_info() behaviour modifications in
	multi-thread mode, change some set_info() for set_default() to modify
	task specific dictionary synchronously. Also remove splitlines() where
	MsgTreeElem are returned instead of whole buffer after latest MsgTree
	improvements.

	* scripts/clubak.py: Added clubak utility (trac ticket #47). It provides
	 dshbak backward-compatibility, but always try to sort buffers by nodes or
	 nodeset. It also provides additional -L option to switch to alternative
	 line mode display.

2010-02-09 S. Thiell <stephane.thiell@cea.fr>

	* Worker.py: Updated Task/MsgTree dependencies. Added iter_node_errors()
	method. Added match_keys optional parameter to iter_node_buffers() and
	iter_node_errors(). Added WorkerSimple.error() method (read stderr).
	Added tests.

	* Task.py: Updated MsgTree dependencies. Factorized most tree data's
	access methods.

	* MsgTree.py: Merged Msg and _MsgTreeElem in one class MsgTreeElem. All
	message objects returned are now instance of MsgTreeElem. Some algorithms
	improvements. Renamed main MsgTree access methods: messages(), items() and
	walk(). Added more docstring.

	* NodeSet.py: Modified NodeSet.__iter__() and __str__() so that nodes are
	now always sorted by name/pattern (eg. acluster2, bcluster1).

2010-02-07 S. Thiell <stephane.thiell@cea.fr>

	* MsgTree.py: Rewrite of MsgTree module with a better API (part of trac
	ticket #47). Adapted library classes. Added specific tests.

2010-02-02 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Add Task.key_error() and its alias node_error() methods for
	easy retrieving of error buffers for a specified key/node.

	* scripts/clush.py: Fix stdout/stderr separation issue (introduced
	in 1.2b2) thanks to the new Task.set_default() method.

	* Task.py: As set_info() is now dispatched through the task special port,
	and applied only on task.resume() when called from another thread, add two