@@ -1,5 +1,9 @@
 2010-02-10 S. Thiell <stephane.thiell@cea.fr>
 	
+	* Worker/Ssh.py: Added command, source and dest public instance variable.
+
+	* Worker/Pdsh.py: Added command, source and dest public instance variable.
+
 	* scripts/clush.py: Due to set_info() behaviour modifications in
 	multi-thread mode, change some set_info() for set_default() to modify
 	task specific dictionary synchronously. Also remove splitlines() where
